
[TestDiff/creates_migration_file_from_schema_diff - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- source: /testdir/schema.sql
-- version: (devel)

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### conduit.sum ###
a1876bffea260abf


---

[TestDiffSplitsMigrations/splits_into_tx_and_non-tx_migration_files - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- source: /testdir/schema.sql
-- version: (devel)

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### 20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- source: /testdir/schema.sql
-- version: (devel)

---- disable-tx ----

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);
### conduit.sum ###
47a8c2b78738c610


---

[TestDiffSplitsMigrations/should_split_into_tx_and_non-tx_files,_when_diff_contains_mixed_DDL - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit devel via pg-schema-diff unknown. DO NOT EDIT.
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### 20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit devel via pg-schema-diff unknown. DO NOT EDIT.
-- source: /testdir/schema.sql

---- disable-tx ----

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);

### conduit.sum ###
47a8c2b78738c610


---

[TestDiff/should_create_migration_file,_when_schema_has_new_table - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts.up.sql ###
-- Code generated by conduit devel via pg-schema-diff unknown. DO NOT EDIT.
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### conduit.sum ###
a1876bffea260abf


---
